--- a/Backend/.env
+++ b/Backend/.env
@@ -1,4 +1,5 @@
 PORT=3000
 
-MONGO_URL="mongodb://localhost:27017/EMS"
+# MONGO_URL="mongodb://localhost:27017/EMS"
+MONGO_URL="mongodb+srv://hemendrakumarcs23:hemendra123@cluster0.l4xjti4.mongodb.net/empdb?retryWrites=true&w=majority&appName=Cluster0"
 TOKEN_JWT="jwtauthentication23423423432@33#%#&#^&"
